# CompMath

1_sem/lab1/: CMakeLists.txt  README.md
1_sem/lab1/lib/include/: matrix.hpp
1_sem/lab1/lib/src/: matrix.cpp
1_sem/lab1/src/: main.cpp
1_sem/lab2/: CMakeLists.txt  README.md
1_sem/lab2/lib/include/: matrix.hpp  newt_interp.hpp
1_sem/lab2/lib/src/: matrix.cpp  newt_interp.cpp
1_sem/lab3/: README.md
1_sem/lab4/: README.md  main.cpp
1_sem/lab5/: README.md
1_sem/lab6/: README.md
2_sem/lab1/: README.md  cde.py
2_sem/lab2/: README.md  riman.py
lab1/: a.out  main.cpp  matrix.cpp  matrix.hpp  test.txt
lab2/: a.out  main.cpp
lab2/lib/include/: matrix.hpp  newt_interp.hpp  test.txt
lab2/lib/src/: matrix.cpp  newt_interp.cpp
lab2/src/: main.cpp
lab3/: CubicSpline.cpp  CubicSpline.hpp  main.cpp
lab4/: integrate.cpp  integrate.hpp
lab6/: RungeKutt.hpp  main.cpp  out.txt  test
